# ACS_Visual_Odometry

./: CMakeLists.txt  FREAK_feature_descriptor.cpp  FREAK_feature_descriptor.h  PoseUpdate.cpp  PoseUpdate.hpp  README.md  RelativePoseUpdate.cpp  VisualOdometry.cpp  VisualOdometry.h  add.cpp  compare_corner_detection_time_benchmarks.py  compare_corner_detection_tp_GPU.py  compare_with_serial.cpp  corner_detection.cpp  corner_detection.h  feature_extraction.cpp  main.cpp  main_pipeline.cpp  matching  matching.cpp  matching_serial.cpp  plot_trajectory.m  ransac.cpp  ransac.hpp  test_feature_extraction.cpp  test_feature_extraction.h  test_opencl.cl  test_opencl.cpp  test_opencl.h  test_pose_estimation.cpp
b/: CMakeCache.txt  Makefile  callgrind.out.47587  callgrind.out.48461  cmake_install.cmake  common_float_matches.txt  custom_float_matches.txt  cv_float_matches.txt  matching  test_feature_extraction
feature_extraction/: FREAK_feature_descriptor.cpp  FREAK_feature_descriptor.h  corner_detection.cpp  corner_detection.h  test_feature_extraction.cpp  test_feature_extraction.h
feature_extraction_parallel/: FREAK_feature_descriptor_parallel.cpp  FREAK_feature_descriptor_parallel.h  corner_detection_parallel.cpp  corner_detection_parallel.h  feature_extraction_parallel.cpp  feature_extraction_parallel.h  test_feature_extraction_parallel.cpp  threadpool.cpp
feature_extraction_parallel_GPU/: FREAK_feature_descriptor_parallel.cpp  FREAK_feature_descriptor_parallel.h  FREAK_feature_descriptor_parallel_GPU.cpp  FREAK_feature_descriptor_parallel_GPU.h  corner_detection_parallel.cpp  corner_detection_parallel_GPU.cpp  corner_detection_parallel_GPU.h  feature_extraction_parallel.h  feature_extraction_parallel_GPU.cpp  feature_extraction_parallel_GPU.h  join_threads.h  precompile_kernel_source_code.cpp  threadpool.h  ts_queue.h
feature_matching_parallel/: feature_matching_parallel.cpp  feature_matching_parallel.h
kernels/: feature_extraction_kernel_functions.c  gradient_convolution.cl  numerical_reduction.cl  process_1d_array.cl  process_2d_array.cl
